--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@mantine/core": "^7.3.0",
-    "@mantine/hooks": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
