--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "format": "prettier --write \"{src,tests,types,data}/**/*.{ts,tsx}\"",
     "test": "vitest"
   },
   "dependencies": {
