lint: remove redundant prettier configuration options
Most option overrides are already the default setting

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,3 @@
 {
-  "singleQuote": true,
-  "jsxSingleQuote": false,
-  "semi": true,
-  "useTabs": false,
-  "tabWidth": 2,
-  "trailingComma": "all",
-  "endOfLine": "lf"
+  "singleQuote": true
 }
