--- a/.prettierignore
+++ b/.prettierignore
@@ -1,10 +1,14 @@
 .DS_Store
 node_modules
 /build
+/dist
 /package
 .env
 .env.*
 !.env.example
+.github/
+tsconfig.json
+
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
