ci: change branch trigger to main for all workflows
In preparation for pushing this branch into main

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: Linting and formatting
 
 on:
   push:
-    branches: [38-set-up-ci-workflows]
+    branches: [main]
   pull_request:
     branches: [main]
 
