--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Building
 
 on:
   push:
-    branches: [38-set-up-ci-workflows]
+    branches: [main]
   pull_request:
     branches: [main]
 
